namespace Mvp.Cli.Manifests;

public class MvpManifestProperty
{
    public string Name { get; set; } = string.Empty;

    public string Type { get; set; } = "string";
}
