namespace Mvp.Cli.Manifests;

public class MvpManifestComponent
{
    public string Name { get; set; } = string.Empty;

    public string Library { get; set; } = "components";
}
