@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
title Class structure — Describe a solution

class MvpManifest
class MvpManifestEntity
class MvpManifestProperty
class MvpManifestPage
class MvpManifestComponent
interface IManifestLoader {
  +Load(path: string): ManifestLoadResult
}
class YamlManifestLoader {
  {static} +MaximumManifestBytes: long = 1048576
  +Load(path: string): ManifestLoadResult
}
class ManifestLoadResult {
  +Manifest: MvpManifest
  +Warnings: IReadOnlyList<string>
}
class ManifestValidator {
  +Validate(dto, nameOverride, outputOverride, warnings): ValidatedManifest
}
class ValidatedManifest
class ValidatedEntity
class ValidatedProperty
class ValidatedPage
class ValidatedComponent
enum FrontendLibrary

MvpManifest *-- MvpManifestEntity
MvpManifestEntity *-- MvpManifestProperty
MvpManifest *-- MvpManifestPage
MvpManifest *-- MvpManifestComponent
IManifestLoader <|.. YamlManifestLoader
YamlManifestLoader ..> ManifestLoadResult : creates
ManifestLoadResult --> MvpManifest
ManifestValidator ..> ValidatedManifest : creates
ValidatedManifest *-- ValidatedEntity
ValidatedEntity *-- ValidatedProperty
ValidatedManifest *-- ValidatedPage
ValidatedManifest *-- ValidatedComponent
ValidatedComponent --> FrontendLibrary
@enduml
